<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="app_name">EventsTracker</string>
    <string name="action_search">Search</string>
    <string name="openDrawer">OpenDrawer</string>
    <string name="closeDrawer">CloseDrawer</string>
    <string name="home">Home</string>
    <string name="event">Event</string>
    <string name="mail">Mail</string>
    <string name="favorites">Favourites</string>
    <string name="locating_device">Locating your device…</string>
    <string name="details">Details</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="title_activity_result">ResultActivity</string>
    <string name="select_country">Location:</string>
    <string name="du">From</string>
    <string name="au">To</string>
    <string name="rech_av">Advanced Search</string>
    <string name="tri_date_croi">Ascending sort by date</string>
    <string name="tri_date_decroi">Descending sort by Date</string>
    <string name="track_events">Don\'t miss any of your favorite events</string>
    <string name="title_activity_preferences">Preferences</string>
    <string name="save">Save</string>
    <string name="title_favoris">Favourites</string>
    <string name="action_delete">Delete</string>
    <string name="action_detail">Details</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="choix_options">Select search options : </string>
    <string name="pref_options">Set your preferences :</string>
    <string name="choix_lieu">Set location:</string>
    <string name="geolocalisation">Geolocation</string>
    <string name="choix_pays">Choose country</string>
    <string name="maj_position">Syn Position</string>
    <string name="saisir_position">Enter your location</string>
    <string name="types_events">Events type</string>
    <string name="sportifs">Sporting</string>
    <string name="culturels">Cultural</string>
    <string name="cat_event_sport">Sportive events category</string>
    <string name="football">Football</string>
    <string name="handball">Handball</string>
    <string name="basketball">Basketball</string>
    <string name="tennis">Tennis</string>
    <string name="cat_event_culture">Cultural events category</string>
    <string name="theatre">Theatre</string>
    <string name="musique">Music</string>
    <string name="cinema">Cinema</string>
    <string name="expo_plastique">Exhibitions and plastic arts</string>
    <string name="littérature">Literature</string>
    <string name="chercher">Search</string>
    <string name="date_début">Start date:</string>
    <string name="date_fin">End date:</string>
    <string name="heure_début">Start time:</string>
    <string name="heure_fin">End time:</string>
    <string name="description">Description:</string>
    <string name="ajouter_favoris">Add to favourites</string>
    <string name="space">space</string>
    <string name="title">title</string>
    <string name="gps_not_provided">GPS is disabled</string>
    <string name="ajouter_aux_favoris">Do you want to add this event to the favorite events list ?</string>
    <string name="oui">Yes</string>
    <string name="non">No</string>
    <string name="connectez_internet">Please connect to Internet !</string>
    <string name="retirer_favoris">The event was removed from the favoourite list</string>
    <string name="de">From</string>
    <string name="a">To</string>
    <string name="events_sport">sporting events</string>
    <string name="events_culturel">cultural events</string>
    <string name="all_events">all events</string>
    <string name="no_sportive">No sporting events</string>
    <string name="no_cultural">No cultural events</string>
    <string name="today_event">Today you have the event </string>
    <string name="tomorrow_event">Tomorrow you will have the event</string>
    <string name="plz_update_location">Please update your location !</string>
    <string name="last_db_loaded">"No Internet connection ! The last research results will be displayed .</string>
    <string name="loading">Loading …</string>
    <string name="results">Results</string>
    <string name="location">Location</string>
    <string name="verify_connection">Checking connection…</string>
    <string name="added_to_favourite">The event was successfully added to the favourites !</string>
    <string name="already_favourite">This event is already one of your favourites !</string>
    <string name="date_error">The end date must be posterior to the start date !</string>
    <string name="appropriate_date">Enter a date in the specified interval !</string>
    <string name="set_notification">Set notifications</string>
    <string name="choose_date">Choose a date  between %1$s  et %2$s for the notification"</string>
    <string name="undefined">Undefined</string>
    <string name="chosenDate">Chosen Date</string>
    <string name="dialogcannottitle">Adding failed</string>
    <string name="cannnotaddtofav">This event cannot be added to the favourites as it already happened</string>


</resources>